fixed iAmsterdam logo. Fixed range panel overflow. Fixed range delete button

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -79,6 +79,7 @@ header {
   position: absolute;
   top: 100%;
   right: 10px;
+  z-index: 2;
 
   @media (min-width: $breakpoint-tablet-portrait) {
     right: 20px;
