--- a/src/components/ranges/range-summary.scss
+++ b/src/components/ranges/range-summary.scss
@@ -1,10 +1,6 @@
 @import "../../style/variables";
 
 .range-summary {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
   position: relative;
   height: 80px;
   padding: 0 20px;
@@ -12,13 +8,11 @@
   list-style: inside none;
 
   .values {
-    flex-grow: 1;
     display: flex;
     flex-direction: row;
     align-items: center;
     line-height: 1;
-    justify-content: space-between;
-    width: 300px;
+    width: 100%;
     padding: 28px;
   }
 
@@ -35,7 +29,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    flex-grow: 1;
+    @media (min-width: $breakpoint-tablet-portrait) {
+      width: 134px;
+    }
   }
 
   .transport-method {
@@ -57,12 +53,13 @@
     cursor: pointer;
     padding: 0;
     position: absolute;
-    right: 20px;
+    right: 10px;
+    top: calc(50% - 8px);
 
     .icon {
       display: block;
-      width: 12px;
-      height: 12px;
+      width: 16px;
+      height: 16px;
       color: lighten($greyscale-1, 25);
     }
 
